--- a/package.json
+++ b/package.json
@@ -1,24 +1,45 @@
 {
-  "name": "prillio",
+  "name": "theproject",
   "version": "1.0.0",
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "start": "nodemon node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "webpack:development:client": "webpack --mode=development --config webpack.client.js --watch",
+    "webpack:development:server": "webpack --mode=development --config webpack.server.js --watch",
+    "webpack:development:start": "nodemon --watch build --exec node build/bundle.js",
+    "dev": "npm-run-all --parallel webpack:development:*",
+    "build": "webpack --config webpack.client.js && webpack --config webpack.server.js",
+    "start": "npm-run-all --parallel webpack:production:* && nodemon --exec node build/bundle.js",
+    "webpack:production:client": "webpack --mode=production --config webpack.client.js",
+    "webpack:production:server": "webpack --mode=production --config webpack.server.js",
+    "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Syntax365/prillio.git"
-  },
-  "author": "Tyler Prill",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Syntax365/prillio/issues"
-  },
-  "homepage": "https://github.com/Syntax365/prillio#readme",
-  "description": "",
   "dependencies": {
-    "express": "4.18.1",
-    "nodemon": "^2.0.16"
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "@google-cloud/storage": "^5.15.5",
+    "babel-loader": "^8.2.2",
+    "babel-preset-env": "^1.7.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.13",
+    "npm-run-all": "^4.1.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
+    "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.6",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0",
+    "regenerator-runtime": "^0.13.9",
+    "webpack": "^5.58.1",
+    "webpack-cli": "^4.9.0",
+    "webpack-node-externals": "^3.0.0"
+  },
+  "devDependencies": {
+    "jest": "^27.3.0"
   }
 }
