--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@google-cloud/storage": "^5.15.5",
+    "@monaco-editor/react": "^4.4.5",
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
     "dotenv": "^10.0.0",
