--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "engines": {
-    "node": ">=12"
+    "node": "18.2.0"
   },
   "scripts": {
     "webpack:development:client": "webpack --mode=development --config webpack.client.js --watch",
