--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.13",
     "npm-run-all": "^4.1.5",
+    "nvm": "^0.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
